Remoção do workingProject